# cilkwilk

./: Makefile  Makefile.dep  Makefile.in  Makefile~  aclocal.m4  autoconfig.h  autoconfig.h.in  config.c  config.h  config.status  configure  configure.ac  dicaprio  io.c  io.h  memory.c  memory.h  nonogram  nonogram.c  nonogram.c~  nonogram.h  queue.c  queue.h  runall  runfew  term.c  term.h  test-input
doc/: Makefile  changelog  manpage.pod  nonogram.1
private/: build-source-tarball  update-makefile-dep  update-version
